# paxutils

./: .cvsignore  .gitignore  ChangeLog  Make.rules  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  bootstrap.conf  configure.ac  gnulib.modules  paxlib.modules
am/: rmt.m4  system.m4
build-aux/: .cvsignore  bootstrap  gnulib.modules
doc/: .gitignore  DISTFILES  genfile.texi  rmt.8
lib/: DISTFILES  Makefile.tmpl  paxbuf.c  paxbuf.h  rmt.h  rtapelib.c  system-ioctl.h  system.h
m4/: DISTFILES  rmt.m4  system.m4
paxlib/: DISTFILES  Makefile.am  error.c  exit.c  names.c  pax.h  paxbuf.c  paxbuf.h  paxerror.h  paxlib.h  rtape.c  tar.h  tarbuf.c  tardef.h
paxtest/: Makefile.am  paxtest.c  paxtest.h
po/: .gitignore  Makevars  POTFILES.in
rmt/: Makefile.am  rmt.c
tests/: DISTFILES  argcv.c  argcv.h  genfile.c
