# This file is part of GNU paxutils
#
# Copyright (c) 2005 Free Software Foundation, Inc.
#
# Written by Sergey Poznyakoff
#
# GNU Paxutils is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation; either version 2, or (at your option) any later
# version.
#
# GNU Paxutils is distributed in the hope that it will be useful, but
# without any warranty; without even the implied warranty of
# merchantability or fitness for a particular purpose.  see the gnu general
# public license for more details.
#
# You should have received a copy of the GNU General Public License along
# with GNU Paxutils; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib paxlib paxtest po
